--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@
 ################################################################################
 
 /.vs/StarfieldPlus.OpenGL/v16/.suo
+/StarfieldPlus.OpenGL/bin/Debug/StarfieldPlus.OpenGL.exe
+/StarfieldPlus.OpenGL/bin/Debug/StarfieldPlus.OpenGL.exe.config
+/StarfieldPlus.OpenGL/bin/Debug/StarfieldPlus.OpenGL.pdb
+/StarfieldPlus.OpenGL/obj/Debug
