texture loading from file or bitmap

--- a/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
+++ b/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
@@ -71,72 +71,73 @@
     <Compile Include="myUtils\__distributionTester.cs" />
     <Compile Include="myUtils\__myColorPicker.cs" />
     <Compile Include="myUtils\__myUtils.cs" />
+    <Compile Include="OpenGL\myPrimitives\_Tex.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ScreenSaver.cs" />
-    <Compile Include="_OpenGL\GL.cs" />
-    <Compile Include="_OpenGL\GLFW\CharEventArgs.cs" />
-    <Compile Include="_OpenGL\GLFW\ContentScaleEventArgs.cs" />
-    <Compile Include="_OpenGL\GLFW\Delegates.cs" />
-    <Compile Include="_OpenGL\GLFW\Enums\ClientApi.cs" />
-    <Compile Include="_OpenGL\GLFW\Enums\ConnectionStatus.cs" />
-    <Compile Include="_OpenGL\GLFW\Enums\Constants.cs" />
-    <Compile Include="_OpenGL\GLFW\Enums\ContextApi.cs" />
-    <Compile Include="_OpenGL\GLFW\Enums\ContextAttributes.cs" />
-    <Compile Include="_OpenGL\GLFW\Enums\CursorMode.cs" />
-    <Compile Include="_OpenGL\GLFW\Enums\CursorType.cs" />
-    <Compile Include="_OpenGL\GLFW\Enums\ErrorCode.cs" />
-    <Compile Include="_OpenGL\GLFW\Enums\GamePadAxis.cs" />
-    <Compile Include="_OpenGL\GLFW\Enums\GamePadButton.cs" />
-    <Compile Include="_OpenGL\GLFW\Enums\Hat.cs" />
-    <Compile Include="_OpenGL\GLFW\Enums\Hint.cs" />
-    <Compile Include="_OpenGL\GLFW\Enums\InputMode.cs" />
-    <Compile Include="_OpenGL\GLFW\Enums\InputState.cs" />
-    <Compile Include="_OpenGL\GLFW\Enums\Joystick.cs" />
-    <Compile Include="_OpenGL\GLFW\Enums\Keys.cs" />
-    <Compile Include="_OpenGL\GLFW\Enums\ModifierKeys.cs" />
-    <Compile Include="_OpenGL\GLFW\Enums\MouseButton.cs" />
-    <Compile Include="_OpenGL\GLFW\Enums\Profile.cs" />
-    <Compile Include="_OpenGL\GLFW\Enums\ReleaseBehavior.cs" />
-    <Compile Include="_OpenGL\GLFW\Enums\Robustness.cs" />
-    <Compile Include="_OpenGL\GLFW\Enums\WindowAttribute.cs" />
-    <Compile Include="_OpenGL\GLFW\Exception.cs" />
-    <Compile Include="_OpenGL\GLFW\FileDropEventArgs.cs" />
-    <Compile Include="_OpenGL\GLFW\GameWindow.cs" />
-    <Compile Include="_OpenGL\GLFW\Glfw.cs" />
-    <Compile Include="_OpenGL\GLFW\JetBrains.Annotations.cs" />
-    <Compile Include="_OpenGL\GLFW\KeyEventArgs.cs" />
-    <Compile Include="_OpenGL\GLFW\MaximizeEventArgs.cs" />
-    <Compile Include="_OpenGL\GLFW\MouseButtonEventArgs.cs" />
-    <Compile Include="_OpenGL\GLFW\MouseMoveEventArgs.cs" />
-    <Compile Include="_OpenGL\GLFW\Native.cs" />
-    <Compile Include="_OpenGL\GLFW\NativeWindow.cs" />
-    <Compile Include="_OpenGL\GLFW\SizeChangeEventArgs.cs" />
-    <Compile Include="_OpenGL\GLFW\Strings.Designer.cs" />
-    <Compile Include="_OpenGL\GLFW\Structs\Cursor.cs" />
-    <Compile Include="_OpenGL\GLFW\Structs\EGLContext.cs" />
-    <Compile Include="_OpenGL\GLFW\Structs\EGLDisplay.cs" />
-    <Compile Include="_OpenGL\GLFW\Structs\EGLSurface.cs" />
-    <Compile Include="_OpenGL\GLFW\Structs\GamePadState.cs" />
-    <Compile Include="_OpenGL\GLFW\Structs\GammaRamp.cs" />
-    <Compile Include="_OpenGL\GLFW\Structs\GammaRampInternal.cs" />
-    <Compile Include="_OpenGL\GLFW\Structs\GLXContext.cs" />
-    <Compile Include="_OpenGL\GLFW\Structs\HGLRC.cs" />
-    <Compile Include="_OpenGL\GLFW\Structs\Image.cs" />
-    <Compile Include="_OpenGL\GLFW\Structs\Monitor.cs" />
-    <Compile Include="_OpenGL\GLFW\Structs\NSOpenGLContext.cs" />
-    <Compile Include="_OpenGL\GLFW\Structs\OSMesaContext.cs" />
-    <Compile Include="_OpenGL\GLFW\Structs\VideoMode.cs" />
-    <Compile Include="_OpenGL\GLFW\Structs\Window.cs" />
-    <Compile Include="_OpenGL\GLFW\Util.cs" />
-    <Compile Include="_OpenGL\GLFW\Vulkan.cs" />
-    <Compile Include="_OpenGL\myPrimitives\_Ellipse.cs" />
-    <Compile Include="_OpenGL\myPrimitives\_Hexagon.cs" />
-    <Compile Include="_OpenGL\myPrimitives\_Line.cs" />
-    <Compile Include="_OpenGL\myPrimitives\_Rectangle.cs" />
-    <Compile Include="_OpenGL\myPrimitives\_Triangle.cs" />
-    <Compile Include="_OpenGL\myPrimitives\__myPrimitive.cs" />
-    <Compile Include="_OpenGL\__myOGL.cs" />
+    <Compile Include="OpenGL\GL.cs" />
+    <Compile Include="OpenGL\GLFW\CharEventArgs.cs" />
+    <Compile Include="OpenGL\GLFW\ContentScaleEventArgs.cs" />
+    <Compile Include="OpenGL\GLFW\Delegates.cs" />
+    <Compile Include="OpenGL\GLFW\Enums\ClientApi.cs" />
+    <Compile Include="OpenGL\GLFW\Enums\ConnectionStatus.cs" />
+    <Compile Include="OpenGL\GLFW\Enums\Constants.cs" />
+    <Compile Include="OpenGL\GLFW\Enums\ContextApi.cs" />
+    <Compile Include="OpenGL\GLFW\Enums\ContextAttributes.cs" />
+    <Compile Include="OpenGL\GLFW\Enums\CursorMode.cs" />
+    <Compile Include="OpenGL\GLFW\Enums\CursorType.cs" />
+    <Compile Include="OpenGL\GLFW\Enums\ErrorCode.cs" />
+    <Compile Include="OpenGL\GLFW\Enums\GamePadAxis.cs" />
+    <Compile Include="OpenGL\GLFW\Enums\GamePadButton.cs" />
+    <Compile Include="OpenGL\GLFW\Enums\Hat.cs" />
+    <Compile Include="OpenGL\GLFW\Enums\Hint.cs" />
+    <Compile Include="OpenGL\GLFW\Enums\InputMode.cs" />
+    <Compile Include="OpenGL\GLFW\Enums\InputState.cs" />
+    <Compile Include="OpenGL\GLFW\Enums\Joystick.cs" />
+    <Compile Include="OpenGL\GLFW\Enums\Keys.cs" />
+    <Compile Include="OpenGL\GLFW\Enums\ModifierKeys.cs" />
+    <Compile Include="OpenGL\GLFW\Enums\MouseButton.cs" />
+    <Compile Include="OpenGL\GLFW\Enums\Profile.cs" />
+    <Compile Include="OpenGL\GLFW\Enums\ReleaseBehavior.cs" />
+    <Compile Include="OpenGL\GLFW\Enums\Robustness.cs" />
+    <Compile Include="OpenGL\GLFW\Enums\WindowAttribute.cs" />
+    <Compile Include="OpenGL\GLFW\Exception.cs" />
+    <Compile Include="OpenGL\GLFW\FileDropEventArgs.cs" />
+    <Compile Include="OpenGL\GLFW\GameWindow.cs" />
+    <Compile Include="OpenGL\GLFW\Glfw.cs" />
+    <Compile Include="OpenGL\GLFW\JetBrains.Annotations.cs" />
+    <Compile Include="OpenGL\GLFW\KeyEventArgs.cs" />
+    <Compile Include="OpenGL\GLFW\MaximizeEventArgs.cs" />
+    <Compile Include="OpenGL\GLFW\MouseButtonEventArgs.cs" />
+    <Compile Include="OpenGL\GLFW\MouseMoveEventArgs.cs" />
+    <Compile Include="OpenGL\GLFW\Native.cs" />
+    <Compile Include="OpenGL\GLFW\NativeWindow.cs" />
+    <Compile Include="OpenGL\GLFW\SizeChangeEventArgs.cs" />
+    <Compile Include="OpenGL\GLFW\Strings.Designer.cs" />
+    <Compile Include="OpenGL\GLFW\Structs\Cursor.cs" />
+    <Compile Include="OpenGL\GLFW\Structs\EGLContext.cs" />
+    <Compile Include="OpenGL\GLFW\Structs\EGLDisplay.cs" />
+    <Compile Include="OpenGL\GLFW\Structs\EGLSurface.cs" />
+    <Compile Include="OpenGL\GLFW\Structs\GamePadState.cs" />
+    <Compile Include="OpenGL\GLFW\Structs\GammaRamp.cs" />
+    <Compile Include="OpenGL\GLFW\Structs\GammaRampInternal.cs" />
+    <Compile Include="OpenGL\GLFW\Structs\GLXContext.cs" />
+    <Compile Include="OpenGL\GLFW\Structs\HGLRC.cs" />
+    <Compile Include="OpenGL\GLFW\Structs\Image.cs" />
+    <Compile Include="OpenGL\GLFW\Structs\Monitor.cs" />
+    <Compile Include="OpenGL\GLFW\Structs\NSOpenGLContext.cs" />
+    <Compile Include="OpenGL\GLFW\Structs\OSMesaContext.cs" />
+    <Compile Include="OpenGL\GLFW\Structs\VideoMode.cs" />
+    <Compile Include="OpenGL\GLFW\Structs\Window.cs" />
+    <Compile Include="OpenGL\GLFW\Util.cs" />
+    <Compile Include="OpenGL\GLFW\Vulkan.cs" />
+    <Compile Include="OpenGL\myPrimitives\_Ellipse.cs" />
+    <Compile Include="OpenGL\myPrimitives\_Hexagon.cs" />
+    <Compile Include="OpenGL\myPrimitives\_Line.cs" />
+    <Compile Include="OpenGL\myPrimitives\_Rectangle.cs" />
+    <Compile Include="OpenGL\myPrimitives\_Triangle.cs" />
+    <Compile Include="OpenGL\myPrimitives\__myPrimitive.cs" />
+    <Compile Include="OpenGL\__myOGL.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -154,7 +155,7 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="_OpenGL\GLFW\Strings.resx" />
+    <EmbeddedResource Include="OpenGL\GLFW\Strings.resx" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
