--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@
 /StarfieldPlus.OpenGL/bin/Debug/StarfieldPlus.OpenGL.exe.config
 /StarfieldPlus.OpenGL/bin/Debug/StarfieldPlus.OpenGL.pdb
 /StarfieldPlus.OpenGL/obj/Debug
+/StarfieldPlus.OpenGL/obj/Release/StarfieldPlus.OpenGL.csproj.AssemblyReference.cache
