--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,10 @@
 /StarfieldPlus.OpenGL/bin/Debug/StarfieldPlus.OpenGL.pdb
 /StarfieldPlus.OpenGL/obj/Debug
 /StarfieldPlus.OpenGL/obj/Release/StarfieldPlus.OpenGL.csproj.AssemblyReference.cache
+/StarfieldPlus.OpenGL1/bin/Debug/StarfieldPlus.OpenGL.exe
+/StarfieldPlus.OpenGL1/bin/Debug/StarfieldPlus.OpenGL.exe.config
+/StarfieldPlus.OpenGL1/bin/Debug/StarfieldPlus.OpenGL.pdb
+/StarfieldPlus.OpenGL1/bin/Release/StarfieldPlus.OpenGL.exe
+/StarfieldPlus.OpenGL1/bin/Release/StarfieldPlus.OpenGL.pdb
+/StarfieldPlus.OpenGL1/bin/Release/StarfieldPlus.OpenGL.exe.config
+/StarfieldPlus.OpenGL1/obj
