--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,9 @@
 /StarfieldPlus.OpenGL/obj/Release
 /StarfieldPlus.OpenGL/bin/Debug/StarfieldPlus.OpenGL.src
 /StarfieldPlus.OpenGL/bin/Release/StarfieldPlus.OpenGL.src
+/StarfieldPlus.OpenGL/bin/Debug/StarfieldPlus.OpenGL.src.exe
+/StarfieldPlus.OpenGL/bin/Debug/StarfieldPlus.OpenGL.src.exe.config
+/StarfieldPlus.OpenGL/bin/Debug/StarfieldPlus.OpenGL.src.pdb
+/StarfieldPlus.OpenGL/bin/Release/StarfieldPlus.OpenGL.src.exe
+/StarfieldPlus.OpenGL/bin/Release/StarfieldPlus.OpenGL.src.exe.config
+/StarfieldPlus.OpenGL/bin/Release/StarfieldPlus.OpenGL.src.pdb
