--- a/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
+++ b/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
@@ -77,6 +77,7 @@
     <Compile Include="myUtils\__myColorPicker.cs" />
     <Compile Include="myUtils\__myUtils.cs" />
     <Compile Include="OpenGL\myPrimitives\_Hexagon_Instanced.cs" />
+    <Compile Include="OpenGL\myPrimitives\_Line_Instanced.cs" />
     <Compile Include="OpenGL\myPrimitives\_Pentagon_Instanced.cs" />
     <Compile Include="OpenGL\myPrimitives\_Pentagon.cs" />
     <Compile Include="OpenGL\myPrimitives\_Ellipse_Instanced.cs" />
