--- a/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
+++ b/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
@@ -76,6 +76,7 @@
     <Compile Include="myScrObjects\myObj_200.cs" />
     <Compile Include="myScrObjects\myObj_999.cs" />
     <Compile Include="myUtils\__distributionTester.cs" />
+    <Compile Include="myUtils\__funcGenerator.cs" />
     <Compile Include="myUtils\__myColorPicker.cs" />
     <Compile Include="myUtils\__myUtils.cs" />
     <Compile Include="OpenGL\myPrimitives\_Hexagon_Instanced.cs" />
