--- a/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
+++ b/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
@@ -76,6 +76,7 @@
     <Compile Include="myScrObjects\myObj_102.cs" />
     <Compile Include="myScrObjects\myObj_130.cs" />
     <Compile Include="myScrObjects\myObj_043.cs" />
+    <Compile Include="myScrObjects\myObj_230.cs" />
     <Compile Include="myScrObjects\myObj__empty.cs" />
     <Compile Include="myScrObjects\myObj_131.cs" />
     <Compile Include="myScrObjects\myObj_220.cs" />
