--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,4 @@
 /StarfieldPlus.OpenGL/bin/Release/StarfieldPlus.OpenGL.src.exe
 /StarfieldPlus.OpenGL/bin/Release/StarfieldPlus.OpenGL.src.exe.config
 /StarfieldPlus.OpenGL/bin/Release/StarfieldPlus.OpenGL.src.pdb
+/.vs/StarfieldPlus.OpenGL/v16/TestStore/0
