--- a/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
+++ b/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
@@ -78,6 +78,7 @@
     <Compile Include="myScrObjects\myObj_130.cs" />
     <Compile Include="myScrObjects\myObj_043.cs" />
     <Compile Include="myScrObjects\myObj_230.cs" />
+    <Compile Include="myScrObjects\myObj_000.cs" />
     <Compile Include="myScrObjects\myObj__empty.cs" />
     <Compile Include="myScrObjects\myObj_131.cs" />
     <Compile Include="myScrObjects\myObj_220.cs" />
