--- a/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
+++ b/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
@@ -101,7 +101,7 @@
     <Compile Include="OpenGL\myPrimitives\_Pentagon.cs" />
     <Compile Include="OpenGL\myPrimitives\_Ellipse_Instanced.cs" />
     <Compile Include="OpenGL\myPrimitives\_Rectangle_Instanced.cs" />
-    <Compile Include="OpenGL\myPrimitives\_Tex.cs" />
+    <Compile Include="OpenGL\myPrimitives\_TexRectangle.cs" />
     <Compile Include="OpenGL\myPrimitives\_Triangle_Instanced.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
