--- a/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
+++ b/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
@@ -79,6 +79,7 @@
     <Compile Include="myScrObjects\myObj_043.cs" />
     <Compile Include="myScrObjects\myObj_230.cs" />
     <Compile Include="myScrObjects\myObj_000.cs" />
+    <Compile Include="myScrObjects\myObj_132.cs" />
     <Compile Include="myScrObjects\myObj__empty.cs" />
     <Compile Include="myScrObjects\myObj_131.cs" />
     <Compile Include="myScrObjects\myObj_220.cs" />
