--- a/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
+++ b/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
@@ -80,6 +80,7 @@
     <Compile Include="myScrObjects\myObj_230.cs" />
     <Compile Include="myScrObjects\myObj_000.cs" />
     <Compile Include="myScrObjects\myObj_132.cs" />
+    <Compile Include="myScrObjects\myObj_170.cs" />
     <Compile Include="myScrObjects\myObj__empty.cs" />
     <Compile Include="myScrObjects\myObj_131.cs" />
     <Compile Include="myScrObjects\myObj_220.cs" />
