--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,4 @@
 /StarfieldPlus.OpenGL/bin/Release/StarfieldPlus.OpenGL.src.exe.config
 /StarfieldPlus.OpenGL/bin/Release/StarfieldPlus.OpenGL.src.pdb
 /.vs/StarfieldPlus.OpenGL/v16/TestStore/0
+/StarfieldPlus.OpenGL/bin/Release/StarfieldPlus.OpenGL.scr
