--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,6 @@
 /StarfieldPlus.OpenGL/bin/Release/StarfieldPlus.OpenGL.src.pdb
 /.vs/StarfieldPlus.OpenGL/v16/TestStore/0
 /StarfieldPlus.OpenGL/bin/Release/StarfieldPlus.OpenGL.scr
+/StarfieldPlus.OpenGL/bin/Release/StarfieldPlus.OpenGL.scr.exe
+/StarfieldPlus.OpenGL/bin/Release/StarfieldPlus.OpenGL.scr.exe.config
+/StarfieldPlus.OpenGL/bin/Release/StarfieldPlus.OpenGL.scr.pdb
