--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,6 @@
 /StarfieldPlus.OpenGL/bin/Release/StarfieldPlus.OpenGL.scr.exe
 /StarfieldPlus.OpenGL/bin/Release/StarfieldPlus.OpenGL.scr.exe.config
 /StarfieldPlus.OpenGL/bin/Release/StarfieldPlus.OpenGL.scr.pdb
+/StarfieldPlus.OpenGL/bin/Debug/StarfieldPlus.OpenGL.scr.exe
+/StarfieldPlus.OpenGL/bin/Debug/StarfieldPlus.OpenGL.scr.exe.config
+/StarfieldPlus.OpenGL/bin/Debug/StarfieldPlus.OpenGL.scr.pdb
