--- a/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
+++ b/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
@@ -106,7 +106,7 @@
     <Compile Include="OpenGL\myPrimitives\_Pentagon_Instanced.cs" />
     <Compile Include="OpenGL\myPrimitives\_Pentagon.cs" />
     <Compile Include="OpenGL\myPrimitives\_Ellipse_Instanced.cs" />
-    <Compile Include="OpenGL\myPrimitives\_ScreenClear.cs" />
+    <Compile Include="OpenGL\myPrimitives\_ScreenDimmer.cs" />
     <Compile Include="OpenGL\myPrimitives\_Rectangle_Instanced.cs" />
     <Compile Include="OpenGL\myPrimitives\_TexRectangle.cs" />
     <Compile Include="OpenGL\myPrimitives\_Triangle_Instanced.cs" />
