--- a/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
+++ b/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
@@ -87,6 +87,7 @@
     <Compile Include="myScrObjects\myObj_100.cs" />
     <Compile Include="myScrObjects\myObj_070.cs" />
     <Compile Include="myScrObjects\myObj_340.cs" />
+    <Compile Include="myScrObjects\myObj_350.cs" />
     <Compile Include="myScrObjects\myObj__empty.cs" />
     <Compile Include="myScrObjects\myObj_131.cs" />
     <Compile Include="myScrObjects\myObj_220.cs" />
