--- a/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
+++ b/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
@@ -89,6 +89,7 @@
     <Compile Include="myScrObjects\myObj_340.cs" />
     <Compile Include="myScrObjects\myObj_360.cs" />
     <Compile Include="myScrObjects\myObj_350.cs" />
+    <Compile Include="myScrObjects\myObj_370.cs" />
     <Compile Include="myScrObjects\myObj__empty.cs" />
     <Compile Include="myScrObjects\myObj_131.cs" />
     <Compile Include="myScrObjects\myObj_220.cs" />
