--- a/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
+++ b/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
@@ -112,8 +112,10 @@
     <Compile Include="OpenGL\myPrimitives\_Ellipse_Instanced.cs" />
     <Compile Include="OpenGL\myPrimitives\_ScreenDimmer.cs" />
     <Compile Include="OpenGL\myPrimitives\_Rectangle_Instanced.cs" />
+    <Compile Include="OpenGL\myPrimitives\_TexRectangle_Renderer.cs" />
     <Compile Include="OpenGL\myPrimitives\_TexRectangle.cs" />
     <Compile Include="OpenGL\myPrimitives\_Triangle_Instanced.cs" />
+    <Compile Include="OpenGL\myPrimitives\__myPrimitiveInst.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ScreenSaver.cs" />
