--- a/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
+++ b/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
@@ -93,6 +93,7 @@
     <Compile Include="myScrObjects\myObj_101.cs" />
     <Compile Include="myScrObjects\myObj_160.cs" />
     <Compile Include="myScrObjects\myObj_380.cs" />
+    <Compile Include="myScrObjects\myObj_390.cs" />
     <Compile Include="myScrObjects\myObj__empty.cs" />
     <Compile Include="myScrObjects\myObj_131.cs" />
     <Compile Include="myScrObjects\myObj_220.cs" />
