--- a/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
+++ b/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
@@ -95,6 +95,7 @@
     <Compile Include="myScrObjects\myObj_380.cs" />
     <Compile Include="myScrObjects\myObj_390.cs" />
     <Compile Include="myScrObjects\myObj_110.cs" />
+    <Compile Include="myScrObjects\myObj_400.cs" />
     <Compile Include="myScrObjects\myObj__empty.cs" />
     <Compile Include="myScrObjects\myObj_131.cs" />
     <Compile Include="myScrObjects\myObj_220.cs" />
