--- a/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
+++ b/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
@@ -96,6 +96,7 @@
     <Compile Include="myScrObjects\myObj_390.cs" />
     <Compile Include="myScrObjects\myObj_110.cs" />
     <Compile Include="myScrObjects\myObj_400.cs" />
+    <Compile Include="myScrObjects\myObj_031.cs" />
     <Compile Include="myScrObjects\myObj__empty.cs" />
     <Compile Include="myScrObjects\myObj_131.cs" />
     <Compile Include="myScrObjects\myObj_220.cs" />
