--- a/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
+++ b/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
@@ -98,6 +98,7 @@
     <Compile Include="myScrObjects\myObj_400.cs" />
     <Compile Include="myScrObjects\myObj_031.cs" />
     <Compile Include="myScrObjects\myObj_410.cs" />
+    <Compile Include="myScrObjects\myObj_420.cs" />
     <Compile Include="myScrObjects\myObj__empty.cs" />
     <Compile Include="myScrObjects\myObj_131.cs" />
     <Compile Include="myScrObjects\myObj_220.cs" />
