--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,4 @@
 /StarfieldPlus.OpenGL/bin/Debug/StarfieldPlus.OpenGL.scr.exe
 /StarfieldPlus.OpenGL/bin/Debug/StarfieldPlus.OpenGL.scr.exe.config
 /StarfieldPlus.OpenGL/bin/Debug/StarfieldPlus.OpenGL.scr.pdb
+/StarfieldPlus.OpenGL/bin/Debug/__ini.ini
