--- a/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
+++ b/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
@@ -38,7 +38,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-    <NoWarn>IDE1006;IDE0055;IDE0044;CS0162;</NoWarn>
+    <NoWarn>IDE1006;IDE0055;IDE0044;IDE0073;CS0162;</NoWarn>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>x64</PlatformTarget>
@@ -112,6 +112,7 @@
     <Compile Include="myScrObjects\myObj_999.cs" />
     <Compile Include="myUtils\__distributionTester.cs" />
     <Compile Include="myUtils\__funcGenerator.cs" />
+    <Compile Include="myUtils\__ini_file.cs" />
     <Compile Include="myUtils\__myColorPicker.cs" />
     <Compile Include="myUtils\__myUtils.cs" />
     <Compile Include="OpenGL\myPrimitives\_Hexagon_Instanced.cs" />
