--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,4 @@
 /StarfieldPlus.OpenGL/bin/Debug/StarfieldPlus.OpenGL.scr.exe.config
 /StarfieldPlus.OpenGL/bin/Debug/StarfieldPlus.OpenGL.scr.pdb
 /StarfieldPlus.OpenGL/bin/Debug/__ini.ini
+/StarfieldPlus.OpenGL/bin/Release/__ini.ini
