--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,5 @@
 /StarfieldPlus.OpenGL/bin/Debug/StarfieldPlus.OpenGL.scr.pdb
 /StarfieldPlus.OpenGL/bin/Debug/__ini.ini
 /StarfieldPlus.OpenGL/bin/Release/__ini.ini
+/StarfieldPlus.OpenGL/bin/Debug/StarfieldPlus.OpenGL.scr
+/glfw-3.3.8.bin.WIN64.zip
