--- a/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
+++ b/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
@@ -103,6 +103,7 @@
     <Compile Include="myScrObjects\myObj_440.cs" />
     <Compile Include="myScrObjects\myObj_450.cs" />
     <Compile Include="myScrObjects\myObj_460.cs" />
+    <Compile Include="myScrObjects\myObj_470.cs" />
     <Compile Include="myScrObjects\myObj__empty.cs" />
     <Compile Include="myScrObjects\myObj_131.cs" />
     <Compile Include="myScrObjects\myObj_220.cs" />
