--- a/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
+++ b/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
@@ -105,6 +105,7 @@
     <Compile Include="myScrObjects\myObj_460.cs" />
     <Compile Include="myScrObjects\myObj_470.cs" />
     <Compile Include="myScrObjects\myObj_480.cs" />
+    <Compile Include="myScrObjects\myObj_490.cs" />
     <Compile Include="myScrObjects\myObj__empty.cs" />
     <Compile Include="myScrObjects\myObj_131.cs" />
     <Compile Include="myScrObjects\myObj_220.cs" />
