--- a/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
+++ b/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
@@ -106,6 +106,7 @@
     <Compile Include="myScrObjects\myObj_470.cs" />
     <Compile Include="myScrObjects\myObj_480.cs" />
     <Compile Include="myScrObjects\myObj_490.cs" />
+    <Compile Include="myScrObjects\myObj_181.cs" />
     <Compile Include="myScrObjects\myObj__empty.cs" />
     <Compile Include="myScrObjects\myObj_131.cs" />
     <Compile Include="myScrObjects\myObj_220.cs" />
