--- a/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
+++ b/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
@@ -125,12 +125,13 @@
     <Compile Include="myUtils\__myColorPicker.cs" />
     <Compile Include="myUtils\__myHelperClasses.cs" />
     <Compile Include="myUtils\__myUtils.cs" />
+    <Compile Include="OpenGL\myPrimitives\_FreeShader.cs" />
     <Compile Include="OpenGL\myPrimitives\_Hexagon_Instanced.cs" />
     <Compile Include="OpenGL\myPrimitives\_Line_Instanced.cs" />
     <Compile Include="OpenGL\myPrimitives\_Pentagon_Instanced.cs" />
     <Compile Include="OpenGL\myPrimitives\_Pentagon.cs" />
     <Compile Include="OpenGL\myPrimitives\_Ellipse_Instanced.cs" />
-    <Compile Include="OpenGL\myPrimitives\_FreeShader.cs" />
+    <Compile Include="OpenGL\myPrimitives\_FreeShader_FullScreen.cs" />
     <Compile Include="OpenGL\myPrimitives\_ScreenDimmer.cs" />
     <Compile Include="OpenGL\myPrimitives\_Rectangle_Instanced.cs" />
     <Compile Include="OpenGL\myPrimitives\_TexRectangle_Renderer.cs" />
