--- a/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
+++ b/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
@@ -124,6 +124,7 @@
     <Compile Include="myUtils\__ini_file.cs" />
     <Compile Include="myUtils\__myColorPicker.cs" />
     <Compile Include="myUtils\__myHelperClasses.cs" />
+    <Compile Include="myUtils\__myShaderHelpers.cs" />
     <Compile Include="myUtils\__myUtils.cs" />
     <Compile Include="OpenGL\myPrimitives\_FreeShader.cs" />
     <Compile Include="OpenGL\myPrimitives\_Hexagon_Instanced.cs" />
