--- a/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
+++ b/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
@@ -108,6 +108,7 @@
     <Compile Include="myScrObjects\myObj_480.cs" />
     <Compile Include="myScrObjects\myObj_490.cs" />
     <Compile Include="myScrObjects\myObj_181.cs" />
+    <Compile Include="myScrObjects\myObj_501.cs" />
     <Compile Include="myScrObjects\myObj_500.cs" />
     <Compile Include="myScrObjects\myObj_103.cs" />
     <Compile Include="myScrObjects\myObj_Extension.cs" />
