--- a/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
+++ b/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
@@ -111,8 +111,9 @@
     <Compile Include="myScrObjects\myObj_501.cs" />
     <Compile Include="myScrObjects\myObj_500.cs" />
     <Compile Include="myScrObjects\myObj_103.cs" />
-    <Compile Include="myScrObjects\myObj_Extension.cs" />
+    <Compile Include="myScrObjects\myObj_Extras.cs" />
     <Compile Include="myScrObjects\myObj_072.cs" />
+    <Compile Include="myScrObjects\myObj_510.cs" />
     <Compile Include="myScrObjects\myObj__empty.cs" />
     <Compile Include="myScrObjects\myObj_131.cs" />
     <Compile Include="myScrObjects\myObj_220.cs" />
