--- a/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
+++ b/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
@@ -114,6 +114,7 @@
     <Compile Include="myScrObjects\myObj_Extras.cs" />
     <Compile Include="myScrObjects\myObj_072.cs" />
     <Compile Include="myScrObjects\myObj_510.cs" />
+    <Compile Include="myScrObjects\myObj_520.cs" />
     <Compile Include="myScrObjects\myObj__empty.cs" />
     <Compile Include="myScrObjects\myObj_131.cs" />
     <Compile Include="myScrObjects\myObj_220.cs" />
