--- a/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
+++ b/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
@@ -115,6 +115,7 @@
     <Compile Include="myScrObjects\myObj_072.cs" />
     <Compile Include="myScrObjects\myObj_510.cs" />
     <Compile Include="myScrObjects\myObj_520.cs" />
+    <Compile Include="myScrObjects\myObj_012.cs" />
     <Compile Include="myScrObjects\myObj__empty.cs" />
     <Compile Include="myScrObjects\myObj_131.cs" />
     <Compile Include="myScrObjects\myObj_220.cs" />
