--- a/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
+++ b/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
@@ -119,6 +119,7 @@
     <Compile Include="myScrObjects\myObj_012.cs" />
     <Compile Include="myScrObjects\myObj_530.cs" />
     <Compile Include="myScrObjects\myObj_540.cs" />
+    <Compile Include="myScrObjects\myObj_550.cs" />
     <Compile Include="myScrObjects\myObj__empty.cs" />
     <Compile Include="myScrObjects\myObj_131.cs" />
     <Compile Include="myScrObjects\myObj_220.cs" />
