--- a/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
+++ b/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
@@ -122,6 +122,7 @@
     <Compile Include="myScrObjects\myObj_550.cs" />
     <Compile Include="myScrObjects\myObj_560.cs" />
     <Compile Include="myScrObjects\myObj_570.cs" />
+    <Compile Include="myScrObjects\myObj_580.cs" />
     <Compile Include="myScrObjects\myObj__empty.cs" />
     <Compile Include="myScrObjects\myObj_131.cs" />
     <Compile Include="myScrObjects\myObj_220.cs" />
