--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,4 @@
 /StarfieldPlus.OpenGL/bin/Release/__ini.ini
 /StarfieldPlus.OpenGL/bin/Debug/StarfieldPlus.OpenGL.scr
 /glfw-3.3.8.bin.WIN64.zip
+/.vs/StarfieldPlus.OpenGL
