--- a/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
+++ b/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
@@ -125,6 +125,7 @@
     <Compile Include="myScrObjects\myObj_580.cs" />
     <Compile Include="myScrObjects\myObj_590.cs" />
     <Compile Include="myScrObjects\myObj_600.cs" />
+    <Compile Include="myScrObjects\myObj_610.cs" />
     <Compile Include="myScrObjects\myObj__empty.cs" />
     <Compile Include="myScrObjects\myObj_131.cs" />
     <Compile Include="myScrObjects\myObj_220.cs" />
