--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,4 @@
 /StarfieldPlus.OpenGL/bin/Debug/StarfieldPlus.OpenGL.scr
 /glfw-3.3.8.bin.WIN64.zip
 /StarfieldPlus.OpenGL/OpenGL/GLFW/obj
+/StarfieldPlus.OpenGL/bin/Release
