--- a/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
+++ b/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{CAD2F59A-338B-4012-ACDB-BD748DB52089}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <RootNamespace>StarfieldPlus.OpenGL</RootNamespace>
-    <AssemblyName>StarfieldPlus.OpenGL.scr</AssemblyName>
+    <AssemblyName>StarfieldPlus.OpenGL</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -42,7 +42,7 @@
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>x64</PlatformTarget>
-    <DebugType>pdbonly</DebugType>
+    <DebugType>none</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
@@ -245,4 +245,8 @@
     <EmbeddedResource Include="OpenGL\GLFW\Strings.resx" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
+  <Target Name="AfterBuild">
+    <Copy SourceFiles="$(TargetDir)\$(TargetName).exe" DestinationFiles="$(ProjectDir)\bin\$(Configuration)\$(TargetName).scr" SkipUnchangedFiles="true" />
+  </Target>
 </Project>
