--- a/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
+++ b/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
@@ -126,6 +126,7 @@
     <Compile Include="myScrObjects\myObj_590.cs" />
     <Compile Include="myScrObjects\myObj_600.cs" />
     <Compile Include="myScrObjects\myObj_610.cs" />
+    <Compile Include="myScrObjects\myObj_011a.cs" />
     <Compile Include="myScrObjects\myObj__empty.cs" />
     <Compile Include="myScrObjects\myObj_131.cs" />
     <Compile Include="myScrObjects\myObj_220.cs" />
