--- a/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
+++ b/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
@@ -146,6 +146,7 @@
     <Compile Include="myUtils\__myHelperClasses.cs" />
     <Compile Include="myUtils\__myShaderHelpers.cs" />
     <Compile Include="myUtils\__myUtils.cs" />
+    <Compile Include="myUtils\__winApi.cs" />
     <Compile Include="OpenGL\myPrimitives\_FreeShader.cs" />
     <Compile Include="OpenGL\myPrimitives\_FreeShader_Instanced.cs" />
     <Compile Include="OpenGL\myPrimitives\_Hexagon_Instanced.cs" />
