--- a/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
+++ b/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
@@ -130,6 +130,7 @@
     <Compile Include="myScrObjects\myObj_011a.cs" />
     <Compile Include="myScrObjects\myObj_620.cs" />
     <Compile Include="myScrObjects\myObj_630.cs" />
+    <Compile Include="myScrObjects\myObj_999_test_001.cs" />
     <Compile Include="myScrObjects\myObj__empty.cs" />
     <Compile Include="myScrObjects\myObj_131.cs" />
     <Compile Include="myScrObjects\myObj_220.cs" />
