--- a/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
+++ b/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
@@ -113,6 +113,7 @@
     <Compile Include="myScrObjects\myObj_501.cs" />
     <Compile Include="myScrObjects\myObj_500.cs" />
     <Compile Include="myScrObjects\myObj_103.cs" />
+    <Compile Include="myScrObjects\myObj_011b.cs" />
     <Compile Include="myScrObjects\myObj_Extras.cs" />
     <Compile Include="myScrObjects\myObj_072.cs" />
     <Compile Include="myScrObjects\myObj_510.cs" />
