--- a/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
+++ b/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
@@ -68,6 +68,7 @@
   <ItemGroup>
     <Compile Include="myClasses\_ParticleTrail.cs" />
     <Compile Include="myScrObjects\myObj.cs" />
+    <Compile Include="myScrObjects\myObj_011c.cs" />
     <Compile Include="myScrObjects\myObj_021.cs" />
     <Compile Include="myScrObjects\myObj_020.cs" />
     <Compile Include="myScrObjects\myObj_042.cs" />
