--- a/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
+++ b/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
@@ -162,6 +162,7 @@
     <Compile Include="OpenGL\myPrimitives\_Pentagon.cs" />
     <Compile Include="OpenGL\myPrimitives\_Ellipse_Instanced.cs" />
     <Compile Include="OpenGL\myPrimitives\_FreeShader_FullScreen.cs" />
+    <Compile Include="OpenGL\myPrimitives\_ScreenGradient.cs" />
     <Compile Include="OpenGL\myPrimitives\_ScreenDimmer.cs" />
     <Compile Include="OpenGL\myPrimitives\_Rectangle_Instanced.cs" />
     <Compile Include="OpenGL\myPrimitives\_TexRectangle_Renderer.cs" />
