--- a/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
+++ b/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
@@ -135,6 +135,7 @@
     <Compile Include="myScrObjects\myObj_999_test_001.cs" />
     <Compile Include="myScrObjects\myObj_140.cs" />
     <Compile Include="myScrObjects\myObj_640.cs" />
+    <Compile Include="myScrObjects\myObj_650.cs" />
     <Compile Include="myScrObjects\myObj__empty.cs" />
     <Compile Include="myScrObjects\myObj_131.cs" />
     <Compile Include="myScrObjects\myObj_220.cs" />
