--- a/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
+++ b/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
@@ -137,6 +137,7 @@
     <Compile Include="myScrObjects\myObj_640.cs" />
     <Compile Include="myScrObjects\myObj_650.cs" />
     <Compile Include="myScrObjects\myObj_660.cs" />
+    <Compile Include="myScrObjects\myObj_670.cs" />
     <Compile Include="myScrObjects\myObj__empty.cs" />
     <Compile Include="myScrObjects\myObj_131.cs" />
     <Compile Include="myScrObjects\myObj_220.cs" />
