--- a/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
+++ b/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
@@ -115,6 +115,7 @@
     <Compile Include="myScrObjects\myObj_500.cs" />
     <Compile Include="myScrObjects\myObj_103.cs" />
     <Compile Include="myScrObjects\myObj_011b.cs" />
+    <Compile Include="myScrObjects\myObj_541.cs" />
     <Compile Include="myScrObjects\myObj_999_test_002b.cs" />
     <Compile Include="myScrObjects\myObj_999_test_002a.cs" />
     <Compile Include="myScrObjects\myObj_Extras.cs" />
