--- a/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
+++ b/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
@@ -115,6 +115,7 @@
     <Compile Include="myScrObjects\myObj_500.cs" />
     <Compile Include="myScrObjects\myObj_103.cs" />
     <Compile Include="myScrObjects\myObj_011b.cs" />
+    <Compile Include="myScrObjects\myObj_999_test_003.cs" />
     <Compile Include="myScrObjects\myObj_541.cs" />
     <Compile Include="myScrObjects\myObj_999_test_002b.cs" />
     <Compile Include="myScrObjects\myObj_999_test_002a.cs" />
@@ -169,6 +170,7 @@
     <Compile Include="OpenGL\myPrimitives\_Pentagon.cs" />
     <Compile Include="OpenGL\myPrimitives\_Ellipse_Instanced.cs" />
     <Compile Include="OpenGL\myPrimitives\_FreeShader_FullScreen.cs" />
+    <Compile Include="OpenGL\myPrimitives\_TexRectangle_Instanced.cs" />
     <Compile Include="OpenGL\myPrimitives\_ScreenGradient.cs" />
     <Compile Include="OpenGL\myPrimitives\_ScreenDimmer.cs" />
     <Compile Include="OpenGL\myPrimitives\_Rectangle_Instanced.cs" />
