--- a/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
+++ b/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
@@ -146,6 +146,7 @@
     <Compile Include="myScrObjects\myObj_690.cs" />
     <Compile Include="myScrObjects\myObj_680.cs" />
     <Compile Include="myScrObjects\myObj_700.cs" />
+    <Compile Include="myScrObjects\myObj_710.cs" />
     <Compile Include="myScrObjects\myObj__empty.cs" />
     <Compile Include="myScrObjects\myObj_131.cs" />
     <Compile Include="myScrObjects\myObj_220.cs" />
