--- a/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
+++ b/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
@@ -148,6 +148,7 @@
     <Compile Include="myScrObjects\myObj_700.cs" />
     <Compile Include="myScrObjects\myObj_710.cs" />
     <Compile Include="myScrObjects\myObj_720.cs" />
+    <Compile Include="myScrObjects\myObj_730.cs" />
     <Compile Include="myScrObjects\myObj__empty.cs" />
     <Compile Include="myScrObjects\myObj_131.cs" />
     <Compile Include="myScrObjects\myObj_220.cs" />
