--- a/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
+++ b/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
@@ -151,6 +151,7 @@
     <Compile Include="myScrObjects\myObj_730.cs" />
     <Compile Include="myScrObjects\myObj_740.cs" />
     <Compile Include="myScrObjects\myObj_750.cs" />
+    <Compile Include="myScrObjects\myObj_760.cs" />
     <Compile Include="myScrObjects\myObj__empty.cs" />
     <Compile Include="myScrObjects\myObj_131.cs" />
     <Compile Include="myScrObjects\myObj_220.cs" />
