--- a/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
+++ b/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
@@ -153,7 +153,7 @@
     <Compile Include="myScrObjects\myObj_750.cs" />
     <Compile Include="myScrObjects\myObj_760.cs" />
     <Compile Include="myScrObjects\myObj_770.cs" />
-    <Compile Include="myScrObjects\myObj_999_test_004.cs" />
+    <Compile Include="myScrObjects\myObj_780.cs" />
     <Compile Include="myScrObjects\myObj__empty.cs" />
     <Compile Include="myScrObjects\myObj_131.cs" />
     <Compile Include="myScrObjects\myObj_220.cs" />
