--- a/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
+++ b/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
@@ -154,6 +154,7 @@
     <Compile Include="myScrObjects\myObj_760.cs" />
     <Compile Include="myScrObjects\myObj_770.cs" />
     <Compile Include="myScrObjects\myObj_780.cs" />
+    <Compile Include="myScrObjects\myObj_790.cs" />
     <Compile Include="myScrObjects\myObj__empty.cs" />
     <Compile Include="myScrObjects\myObj_131.cs" />
     <Compile Include="myScrObjects\myObj_220.cs" />
