--- a/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
+++ b/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
@@ -155,6 +155,7 @@
     <Compile Include="myScrObjects\myObj_770.cs" />
     <Compile Include="myScrObjects\myObj_780.cs" />
     <Compile Include="myScrObjects\myObj_790.cs" />
+    <Compile Include="myScrObjects\myObj_800.cs" />
     <Compile Include="myScrObjects\myObj__empty.cs" />
     <Compile Include="myScrObjects\myObj_131.cs" />
     <Compile Include="myScrObjects\myObj_220.cs" />
