--- a/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
+++ b/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
@@ -156,6 +156,7 @@
     <Compile Include="myScrObjects\myObj_780.cs" />
     <Compile Include="myScrObjects\myObj_790.cs" />
     <Compile Include="myScrObjects\myObj_800.cs" />
+    <Compile Include="myScrObjects\myObj_810.cs" />
     <Compile Include="myScrObjects\myObj__empty.cs" />
     <Compile Include="myScrObjects\myObj_131.cs" />
     <Compile Include="myScrObjects\myObj_220.cs" />
