--- a/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
+++ b/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
@@ -157,6 +157,7 @@
     <Compile Include="myScrObjects\myObj_790.cs" />
     <Compile Include="myScrObjects\myObj_800.cs" />
     <Compile Include="myScrObjects\myObj_810.cs" />
+    <Compile Include="myScrObjects\myObj_820.cs" />
     <Compile Include="myScrObjects\myObj__empty.cs" />
     <Compile Include="myScrObjects\myObj_131.cs" />
     <Compile Include="myScrObjects\myObj_220.cs" />
