--- a/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
+++ b/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
@@ -160,6 +160,7 @@
     <Compile Include="myScrObjects\myObj_820.cs" />
     <Compile Include="myScrObjects\myObj_641.cs" />
     <Compile Include="myScrObjects\myObj_830.cs" />
+    <Compile Include="myScrObjects\myObj_840.cs" />
     <Compile Include="myScrObjects\myObj__empty.cs" />
     <Compile Include="myScrObjects\myObj_131.cs" />
     <Compile Include="myScrObjects\myObj_220.cs" />
