--- a/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
+++ b/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
@@ -161,6 +161,7 @@
     <Compile Include="myScrObjects\myObj_641.cs" />
     <Compile Include="myScrObjects\myObj_830.cs" />
     <Compile Include="myScrObjects\myObj_840.cs" />
+    <Compile Include="myScrObjects\myObj_850.cs" />
     <Compile Include="myScrObjects\myObj__empty.cs" />
     <Compile Include="myScrObjects\myObj_131.cs" />
     <Compile Include="myScrObjects\myObj_220.cs" />
